Page accueil + Page Pauline

--- a/Accueil.html
+++ b/Accueil.html
@@ -19,10 +19,8 @@
     </header>
 
     <main>
-        <h1>Les miroirs</h1>
-        <img src="pexels-mister-mister-2442904 (1).jpg" alt="">
-
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores modi provident quaerat. Excepturi, recusandae neque, commodi corporis necessitatibus fugit minus accusantium atque iste, nostrum a modi. Officia, cupiditate neque voluptatibus atque hic, necessitatibus, ut non corporis quibusdam saepe optio consequatur?</p>
+        <h1>Site de collectionneur</h1>
+        <img src="case-1141774_640.jpg" alt="">
     </main>
     
 </body>
