--- a/Franck.html
+++ b/Franck.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Projet commun</title>
 </head>
 <body>
-    
+    <h1>Poupée en Porcelaine
+        <img src="chucky n wife.webp" alt="Horror Story" height="100" width="800" title="POUPEE EN PORCELAINE">
+    </h1>
+<h2>GALERIES</h2>
+<p><img src="chucky.jpg" alt="chucky" width="300" height="300"> <img src="annabelle_a.jpg" alt="annabelle" width="300" height="300"></p>
+<p><img src="fermez-vous-du-bébé-effrayant-poupée-de-halloween-76678498.webp" alt="bébé afrayant" height="300" width="300"> <img src="450130818_max.jpg" alt="effrayant" width="300" height="300"></p>
 </body>
 </html>
